# compilers

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  index.html
.github/workflows/: build.yml
cmake/: CompileOptions.cmake  FetchLibrary.cmake
cmake/antlr4/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
examples/: find_substring.go  gcd.go  helloworld.go  min.go  strange_string.go
src/: CMakeLists.txt
src/go-compiler/: CMakeLists.txt
src/go-compiler/go-compiler/: main.cpp
src/grammar/: CMakeLists.txt  Go.g4  GoLexer.g4
src/libgo/: CMakeLists.txt
src/libgo/libgo/: dump_tokens.cpp  dump_tokens.hpp  lexer.cpp  lexer.hpp
src/libgo/libgo/ast/: Ast.cpp  Ast.hpp  Visitor.hpp
src/libgo/libgo/ast/detail/: Builder.hpp
src/libgo/tests/: lexer.cpp
